fixes form rout

--- a/views/super_hero.erb
+++ b/views/super_hero.erb
@@ -1,6 +1,6 @@
 <h1>Create a Team and Heroes!</h1>
 
-<form action='/team' method="POST">
+<form action='/teams' method="POST">
 
   <p>
     <label>Team Name:</label>
