--- a/views/super_hero.erb
+++ b/views/super_hero.erb
@@ -46,5 +46,5 @@
     <input type="text" name="team[members][2][bio]" >
   </p>
 
-<button type="submit" name="submit">Submit</button>
+<button type="submit" value="submit">Submit</button>
 </form>
