ID to solution'

--- a/views/super_hero.erb
+++ b/views/super_hero.erb
@@ -13,37 +13,37 @@
   <p>
     <h2>Hero 1</h2>
     <label>Hero's Name</label>
-    <input type="text" name="team[members][0][name]" >
+    <input id="member1_name" type="text" name="team[members][][name]" >
     <br>
     <label>Hero's Power</label>
-    <input type="text" name="team[members][0][power]" >
+    <input id="member1_power" type="text" name="team[members][][power]" >
     <br>
     <label>Hero's Biography</label>
-    <input type="text" name="team[members][0][bio]" >
+    <input id="member1_bio" type="text" name="team[members][][bio]" >
   </p>
 
   <p>
     <h2>Hero 2</h2>
     <label>Hero's Name</label>
-    <input type="text" name="team[members][1][name]" >
+    <input id="member2_name" type="text" name="team[members][][name]" >
     <br>
     <label>Hero's Power</label>
-    <input type="text" name="team[members][1][power]" >
+    <input id="member2_power" type="text" name="team[members][][power]" >
     <br>
     <label>Hero's Biography</label>
-    <input type="text" name="team[members][1][bio]" >
+    <input id="member2_bio" type="text" name="team[members][][bio]" >
   </p>
 
   <p>
     <h2>Hero 3</h2>
     <label>Hero's Name</label>
-    <input type="text" name="team[members][2][name]" >
+    <input id="member3_name" type="text" name="team[members][][name]" >
     <br>
     <label>Hero's Power</label>
-    <input type="text" name="team[members][2][power]" >
+    <input id="member3_power" type="text" name="team[members][][power]" >
     <br>
     <label>Hero's Biography</label>
-    <input type="text" name="team[members][2][bio]" >
+    <input id="member3_bio" type="text" name="team[members][][bio]" >
   </p>
 
 <button type="submit" value="submit">Submit</button>
