commit tree cf8a297ea36ea643a7451ac0029e15821755fbe6

--- a/app/views/super_hero.erb
+++ b/app/views/super_hero.erb
@@ -1,35 +1,35 @@
 
 <h1>Create a Team and Heroes!</h1>
-<form action="/team" method="post">
+<form action="/teams" method="post">
     <p><label for "team_name"> Team Name: </label>
     <input id= "team_name" type="text" name="team[name]"></input></p>
     <p><label for "team_motto"> Team Motto: </label>
     <input id= "team_motto" type="text" name="team[motto]"></input></p>
-<br>
+
 <h1>Hero 1</h1>
     <p><label for "member1_name"> Hero's Name </label>
-    <input id="member1_name" type="text" name="team[heros][][name]</input></p>
+    <input id="member1_name" type="text" name="team[heros][][name]"</input></p>
     <p><label for "member1_power"> Hero's Power </label>
-    <input id="member1_power" type="text" name="team[heros][][power]</input></p>
-    <p><label for "member1_biography"> Hero's Biography </label>
-    <input id="member1_biography" type="text" name="team[heros][][biography]</input></p>
-<br>    
+    <input id="member1_power" type="text" name="team[heros][][power]"</input></p>
+    <p><label for "member1_bio"> Hero's Biography </label>
+    <input id="member1_bio" type="text" name="team[heros][][biography]"</input></p>
+ 
 <h1>Hero 2</h1>
     <p><label for "member2_name"> Hero's Name </label>
-    <input id="member2_name" type="text" name="team[heros][][name]</input></p>
+    <input id="member2_name" type="text" name="team[heros][][name]"</input></p>
     <p><label for "member2_power"> Hero's Power </label>
-    <input id="member2_power" type="text" name="team[heros][][power]</input></p>
-    <p><label for "member2_biography"> Hero's Biography </label>
-    <input id="hmember2_biography" type="text" name="team[heros][][biography]</input></p>
+    <input id="member2_power" type="text" name="team[heros][][power]"</input></p>
+    <p><label for "member2_bio"> Hero's Biography </label>
+    <input id="member2_bio" type="text" name="team[heros][][biography]"</input></p>
     
-<br>
+
     <h1>Hero 3</h1>
     <p><label for "member3_name"> Hero's Name </label>
-    <input id="member3_name" type="text" name="team[heros][][name]</input></p>
+    <input id="member3_name" type="text" name="team[heros][][name]"</input></p>
     <p><label for "member3_power"> Hero's Power </label>
-    <input id="member3_power" type="text" name="team[heros][][power]</input></p>
-    <p><label for "member3_biography"> Hero's Biography </label>
-    <input id="member3_biography" type="text" name="team[heros][][biography]</input></p>
+    <input id="member3_power" type="text" name="team[heros][][power]"</input></p>
+    <p><label for "member3_bio"> Hero's Biography </label>
+    <input id="member3_bio" type="text" name="team[heros][][biography]"</input></p>
 
-  <input id= "Submit" type="submit">
+  <input id= "submit" type="submit">
 </form> 
