--- a/app/views/team.erb
+++ b/app/views/team.erb
@@ -1,3 +1,9 @@
+<h1><%=@team.name%></h1>
+<h2>Team Motto: <%=@team.motto%></h2>
 
 
-
+<%@heros.each do |hero|%>
+    <h2>Hero Name: <%= hero.name %></h6>
+    <h6>Hero Power: <%= hero.power %></h6>
+    <h6>Hero Biography: <%= hero.biography %></h6>
+<% end %>
